--- a/public/project/style/style.css
+++ b/public/project/style/style.css
@@ -50,3 +50,15 @@ td {
     margin-left: 10px;
     color: #5e5e5e;
 }
+
+.patientReviewSection {
+    margin-bottom:50px;
+}
+
+.doctorHeader {
+    padding: 10px;
+}
+
+.pageContent {
+
+}
