project: further refactored favorite doctors page

--- a/public/project/client/views/favorites/favorite.view.html
+++ b/public/project/client/views/favorites/favorite.view.html
@@ -9,31 +9,29 @@
         </ul>
     </div>
     <!--page content-->
-    <div class="col-md-8 col-md-push-1">
+    <div class="col-md-10">
         <div class="row">
             <div ng-repeat="doctor in model.favoriteDoctors">
                 <!--whenever the number of cards per row hits even number, start a new row, wrap the next content from left side or new row-->
                 <div class="clearfix" ng-if="$index % 2 == 0"></div>
                 <!--every card takes half space of the row-->
-                <div class="col-md-6">
-                    <div class="favoriteCard row">
-                        <!--card header-->
-                        <div class="favoriteCardHeader col-md-12">
-                            <p><a ng-click="model.unfavorite(doctor)"><span class="glyphicon glyphicon-remove pull-right"></span></a></p>
-                        </div>
-                        <!--card body-->
-                        <div class="favoriteCardBody col-md-12">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <img class="favoriteCardImg" ng-src="{{doctor.profile.image_url}}">
-                                </div>
-                                <div class="col-md-8 favoriteCardInfo">
-                                    <div>Dr.{{doctor.profile.first_name}} {{doctor.profile.last_name}}</div>
-                                    <div><img ng-src="{{doctor.ratings[0].image_url_small}}"></div>
-                                    <br>
-                                    <div>{{doctor.specialties[0].name}}</div>
-                                    <div>Phone: {{doctor.practices[0].phones[0].number}}</div>
-                                </div>
+                <div class="favoriteCard">
+                    <!--card header-->
+                    <div class="favoriteCardHeader">
+                        <p><a ng-click="model.unfavorite(doctor)"><span class="glyphicon glyphicon-remove pull-right"></span></a></p>
+                    </div>
+                    <!--card body-->
+                    <div class="favoriteCardBody">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img class="favoriteCardImg" ng-src="{{doctor.profile.image_url}}">
+                            </div>
+                            <div class="col-md-8 favoriteCardInfo">
+                                <div>Dr.{{doctor.profile.first_name}} {{doctor.profile.last_name}}</div>
+                                <div><img ng-src="{{doctor.ratings[0].image_url_small}}"></div>
+                                <br>
+                                <div>{{doctor.specialties[0].name}}</div>
+                                <div>Phone: {{doctor.practices[0].phones[0].number}}</div>
                             </div>
                         </div>
                     </div>
