--- a/public/project/client/views/messages/message.view.html
+++ b/public/project/client/views/messages/message.view.html
@@ -7,36 +7,69 @@
             <li ng-if="currentUser.role == 'Patient'" role="presentation"  class="active"><a href="#/message">My Messages</a></li>
         </ul>
     </div>
-    <div class="table-responsive col-md-8">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>From</th>
-                <th>Date</th>
-                <th>Content</th>
-                <th>&nbsp;</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-show="model.needReply">
-                <td>To: {{model.targetMsg.senderName}}</td>
-                <td>{{model.date | date}}</td>
-                <td><input ng-model="model.msgToSend.content" class="form-control"></td>
-                <td>
-                    <button ng-click="model.send()" class="btn btn-info" role="button">Send</button>
-                    <button ng-click="model.cancel()" class="btn btn-danger" role="button">Cancel</button>
-                </td>
-            </tr>
-            <tr ng-repeat="message in model.messages">
-                <td>{{message.senderName}}</td>
-                <td>{{message.date | date}}</td>
-                <td>{{message.content}}</td>
-                <td>
-                    <button ng-click="model.reply(message)" class="btn btn-info" role="button">Reply</button>
-                    <button ng-click="model.removeMsg(message)" class="btn btn-danger" role="button">Delete</button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <!--page content-->
+    <div class="col-md-8">
+        <div class="messageBox col-md-12">
+            <div class="messageBoxHeader row">
+                <div class="col-md-12">
+                    <strong>From: Bob</strong>
+                    <a class="pull-right replyBtn"><span class="glyphicon glyphicon-remove"></span></a>
+                    <a class="pull-right replyBtn"><span class="glyphicon glyphicon-chevron-down"></span></a>
+                </div>
+            </div>
+            <div class="messageBoxBody row" ng-repeat="">
+                <div class="messageCard col-md-12">
+                    <div>bob<span class="messageDate">2016.10.29</span></div>
+                    <div>she was nice, straight, and to the point. real speedy though. personally I like when health care professionals sit and answer you questions and thoroughly examine you</div>
+                    <div><a ng-click="model.openReplyBox()">reply</a></div>
+                </div>
+                <div class="replyBox col-md-12">
+                    <div class="form-group">
+                        <textarea class="form-control" rows="3" ng-model=""/>
+                    </div>
+                    <div class="pull-right">
+                        <button class="btn btn-success" ng-click="">Update</button>
+                        <button class="btn btn-danger" ng-click="">Cancel</button>
+                    </div>
+                </div>
+                <div class="messageCard col-md-12">
+                    <div>Date: 1989.10.29 alice</div>
+                    <div>she was nice, straight, and to the point. real speedy though. personally I like when health care professionals sit and answer you questions and thoroughly examine you she was nice, straight, and to the point. real speedy though. personally I like when health care</div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+<!--<div class="table-responsive col-md-8">-->
+<!--<table class="table table-striped">-->
+<!--<thead>-->
+<!--<tr>-->
+<!--<th>From</th>-->
+<!--<th>Date</th>-->
+<!--<th>Content</th>-->
+<!--<th>&nbsp;</th>-->
+<!--</tr>-->
+<!--</thead>-->
+<!--<tbody>-->
+<!--<tr ng-show="model.needReply">-->
+<!--<td>To: {{model.targetMsg.senderName}}</td>-->
+<!--<td>{{model.date | date}}</td>-->
+<!--<td><input ng-model="model.msgToSend.content" class="form-control"></td>-->
+<!--<td>-->
+<!--<button ng-click="model.send()" class="btn btn-info" role="button">Send</button>-->
+<!--<button ng-click="model.cancel()" class="btn btn-danger" role="button">Cancel</button>-->
+<!--</td>-->
+<!--</tr>-->
+<!--<tr ng-repeat="message in model.messages">-->
+<!--<td>{{message.senderName}}</td>-->
+<!--<td>{{message.date | date}}</td>-->
+<!--<td>{{message.content}}</td>-->
+<!--<td>-->
+<!--<button ng-click="model.reply(message)" class="btn btn-info" role="button">Reply</button>-->
+<!--<button ng-click="model.removeMsg(message)" class="btn btn-danger" role="button">Delete</button>-->
+<!--</td>-->
+<!--</tr>-->
+<!--</tbody>-->
+<!--</table>-->
+<!--</div>-->
