--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -7,8 +7,8 @@
             <li ng-if="currentUser.role == 'Patient'" role="presentation"><a href="#/message">My Messages</a></li>
         </ul>
     </div>
-    <div class="col-md-6 col-md-offset-1">
-        <h1>Profile</h1>
+    <div class="col-md-6">
+        <div><h2>Profile</h2></div>
         <hr>
         <div ng-if="currentUser.role == 'Patient'" class="form-group">
             <label for="email">Email Address:</label>
