--- a/public/project/client/views/messages/message.view.html
+++ b/public/project/client/views/messages/message.view.html
@@ -9,67 +9,33 @@
     </div>
     <!--page content-->
     <div class="col-md-8">
-        <div class="messageBox col-md-12">
+        <div class="messageBox col-md-12" ng-repeat="message in model.messages">
             <div class="messageBoxHeader row">
                 <div class="col-md-12">
-                    <strong>From: Bob</strong>
+                    <strong>From: {{message.senderName}}</strong>
                     <a class="pull-right replyBtn"><span class="glyphicon glyphicon-remove"></span></a>
-                    <a class="pull-right replyBtn"><span class="glyphicon glyphicon-chevron-down"></span></a>
+                    <a class="pull-right replyBtn" ng-click="model.toggleMsg($index)" ng-hide="$index==model.toggleMsgId"><span class="glyphicon glyphicon-chevron-down"></span></a>
+                    <a class="pull-right replyBtn" ng-click="model.toggleMsg($index)" ng-show="$index==model.toggleMsgId"><span class="glyphicon glyphicon-chevron-up"></span></a>
                 </div>
             </div>
-            <div class="messageBoxBody row" ng-repeat="">
-                <div class="messageCard col-md-12">
-                    <div>bob<span class="messageDate">2016.10.29</span></div>
-                    <div>she was nice, straight, and to the point. real speedy though. personally I like when health care professionals sit and answer you questions and thoroughly examine you</div>
-                    <div><a ng-click="model.openReplyBox()">reply</a></div>
-                </div>
-                <div class="replyBox col-md-12">
-                    <div class="form-group">
-                        <textarea class="form-control" rows="3" ng-model=""/>
+            <div ng-class="($index==model.toggleMsgId) ? 'messageBoxBody row' : 'messageBoxBodyToggle row'">
+                <div ng-repeat="msgContent in message.msgContent">
+                    <div class="messageCard col-md-12">
+                        <div>{{message.senderName}}<span class="messageDate">{{msgContent.date | date:medium}}</span></div>
+                        <div>{{msgContent.content}}</div>
+                        <div><a ng-click="model.openReplyBox(msgContent)">reply</a></div>
                     </div>
-                    <div class="pull-right">
-                        <button class="btn btn-success" ng-click="">Update</button>
-                        <button class="btn btn-danger" ng-click="">Cancel</button>
+                    <div class="replyBox col-md-12" ng-show="msgContent._id == model.needReplyId">
+                        <div class="form-group">
+                            <textarea class="form-control" rows="3" ng-model="model.msgContent"/>
+                        </div>
+                        <div class="pull-right">
+                            <button class="btn btn-success" ng-click="model.send(message.senderId)">Send</button>
+                            <button class="btn btn-danger" ng-click="model.cancel()">Cancel</button>
+                        </div>
                     </div>
-                </div>
-                <div class="messageCard col-md-12">
-                    <div>Date: 1989.10.29 alice</div>
-                    <div>she was nice, straight, and to the point. real speedy though. personally I like when health care professionals sit and answer you questions and thoroughly examine you she was nice, straight, and to the point. real speedy though. personally I like when health care</div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-<!--<div class="table-responsive col-md-8">-->
-<!--<table class="table table-striped">-->
-<!--<thead>-->
-<!--<tr>-->
-<!--<th>From</th>-->
-<!--<th>Date</th>-->
-<!--<th>Content</th>-->
-<!--<th>&nbsp;</th>-->
-<!--</tr>-->
-<!--</thead>-->
-<!--<tbody>-->
-<!--<tr ng-show="model.needReply">-->
-<!--<td>To: {{model.targetMsg.senderName}}</td>-->
-<!--<td>{{model.date | date}}</td>-->
-<!--<td><input ng-model="model.msgToSend.content" class="form-control"></td>-->
-<!--<td>-->
-<!--<button ng-click="model.send()" class="btn btn-info" role="button">Send</button>-->
-<!--<button ng-click="model.cancel()" class="btn btn-danger" role="button">Cancel</button>-->
-<!--</td>-->
-<!--</tr>-->
-<!--<tr ng-repeat="message in model.messages">-->
-<!--<td>{{message.senderName}}</td>-->
-<!--<td>{{message.date | date}}</td>-->
-<!--<td>{{message.content}}</td>-->
-<!--<td>-->
-<!--<button ng-click="model.reply(message)" class="btn btn-info" role="button">Reply</button>-->
-<!--<button ng-click="model.removeMsg(message)" class="btn btn-danger" role="button">Delete</button>-->
-<!--</td>-->
-<!--</tr>-->
-<!--</tbody>-->
-<!--</table>-->
-<!--</div>-->
