--- a/public/project/client/views/main/warningPop.view.html
+++ b/public/project/client/views/main/warningPop.view.html
@@ -1,6 +1,6 @@
 <div class="modal-body">
     <div class="popText">
-        <p>Both Specialty and City are required.</p>
+        <p>Both Specialty and Location are required.</p>
     </div>
 </div>
 
