--- a/public/project/client/views/search/result.view.html
+++ b/public/project/client/views/search/result.view.html
@@ -11,7 +11,7 @@
             <select class="form-control" ng-model="model.specialty" ng-options="specialty.value as specialty.label for specialty in model.specialtyOptions"></select>
         </div>
         <div class="form-group">
-            <select class="form-control" ng-model="model.location" ng-options="location.value as location.label for location in model.locationOptions"></select>
+            <input class="form-control" ng-model="model.location" >
         </div>
         <div class="form-group">
             <select class="form-control" ng-model="model.insurance" ng-options="insurance.value as insurance.label for insurance in model.insuranceOptions">
